@@ -15,9 +15,12 @@ do
 	SCORING=$OUTPUT_DIR"scoring.$SPACE.txt";
 
 	# Run local alignment
-	../balign/balign -r $RG -m $MATCHES -x $SCORING -A $SPACE -o $OUTPUT_ID -d $OUTPUT_DIR -T $TMP_DIR 2> /dev/null > /dev/null; 
+	CMD="../balign/balign -r $RG -m $MATCHES -x $SCORING -A $SPACE -o $OUTPUT_ID -d $OUTPUT_DIR -T $TMP_DIR";
+	$CMD 2> /dev/null > /dev/null; 
 	# Get return code
 	if [ "$?" -ne "0" ]; then
+		# Run again without piping anything
+		$CMD;
 		exit 1
 	fi
 done
